--- a/src/App/App.css
+++ b/src/App/App.css
@@ -2,12 +2,14 @@
   min-height: 100vh;
   height: 100%;
   width: 100%;
-  background-image: linear-gradient(0, rgba(0, 0, 0, 0.5) 0%,  rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5) 100%), url('/background.png');
+  background-image:
+    linear-gradient(0, rgba(0, 0, 0, 0.5) 0%,  rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 0.5) 100%),
+    url('/background.png');
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-
+/* Костыль фона для IE (градиент не работает) */
 @media screen and (-ms-high-contrast: none), (-ms-high-contrast: active){
   .App {
     background-image: url('/background.png');
@@ -23,6 +25,7 @@
   text-shadow: 0px 1px 0px rgba(0, 0, 0, 0.004);
   margin-top: 36px;
   margin-bottom: 20px;
+  font-weight: 100;
 }
 
 .App-Products {
@@ -33,12 +36,18 @@
   flex-wrap: wrap;
 }
 
-.App-ProductItem {
+.App-ProductCard {
   margin: 0px 40px 40px 40px;
 }
 
-@media(max-width: 768px){
-  .App-ProductItem {
-    margin: 0px 32px 32px 32px;
+@media(max-width: 900px){
+  .App-Header {
+    font-size: 30px;
+  }
+}
+
+@media(max-width: 480px){
+  .App-Header {
+    font-size: 24px;
   }
 }
